# egzamin-8-klasisty-maly-llm

./: .gitignore  README.md  pyproject.toml
configs/: lora_bielik_full.yaml  lora_pllum_full.yaml  lora_pllum_spike.yaml
data/: klucz_odpowiedzi.json  zadania.json
data/archiwum/: 2019_glowny.json  2020_glowny.json  2021_glowny.json  2022_glowny.json  2023_glowny.json
data/testy/: 2024.json  2025.json
prompts/: ocena_otwartych.txt  system_otwarte.txt  system_zamkniete.txt
publish/: README.md  README_template.md  convert.py  monitor.py  smoke_test.py  status.py  upload.py  verify_token.py
results/: bielik_odpowiedzi.json  finetune_decomposition.json  finetune_loss_spike.json  gemma_odpowiedzi.json  gemma_text_odpowiedzi.json  ocena_szczegolowa.json  pllum12_2512_odpowiedzi.json  pllum8_2512_ft_odpowiedzi.json  pllum8_2512_odpowiedzi.json  raport.md  studium_decomposition.json
results/studium/: bielik_base_2024.json  pllum_ft_2024.json  (+10 more)
scripts/: 01_przygotuj_zadania.py  02_klucz_claude.py  03_run_gemma.py  03b_run_gemma_text.py  04_run_bielik.py  04b_run_bielik_minitron.py  04e_ft_run_pllum8.py  04e_run_pllum8_2512.py  04f_run_pllum12_2512.py  04g_run_pllum4_2512.py  05_ocen.py  06_raport.py  07b_run_studium.py  08_buduj_dataset.py  10_ocen_finetune.py  11_wykresy.py  12_wybierz_checkpoint.py  13_ocen_studium.py  14_wykresy_studium.py  lib_inferencja.py  metryki_format.py  parser_odpowiedzi.py
tests/: conftest.py  test_buduj_dataset.py  test_lib_inferencja.py  test_metryki_format.py  test_ocen_studium.py  test_parser_odpowiedzi.py  test_wybierz_checkpoint.py
(+4 files in other folders)
